# Talentradar-System

./: .gitignore  API_EXAMPLES.md  API_KEYS_CONFIRMED.md  DATA_SOURCES.md  GET_API_KEYS.md  HYDERABAD_SCAN_SUMMARY.md  INDIA_ENHANCEMENTS.md  QUICKSTART.md  README.md  REALTIME_DATA_VERIFICATION.md  STATUS_REPORT.md  TEST_RESULTS.md  a.txt  db_check.py  docker-compose.yml  documentsource.txt  monitor_scan.py  run_focused_scan.py  setup.py  start.bat  start.sh  start_backend.bat  start_frontend.bat  test_search.py  verify_data.py
backend/: .env  .env.example  Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  reset_db.py  reset_db_v4.py  talentradar.db  test_api_keys.py  test_api_raw.py  test_generic_query.py  test_indian_scrapers.py  test_linkedin_integration.py  test_location_filter.py  test_output.txt  verify_complete_system.py  verify_realtime_data.py
backend/app/: config.py  constants.py  database.py  main.py  models.py  schemas.py
backend/app/api/: analytics.py  candidates.py  endpoints.py  enhanced_endpoints.py  jobs.py  outreach.py  pipeline.py  scrape.py  scraper_api.py  test_metrics.py
backend/app/services/: ai_engine.py  apify_service.py  crawl4ai_service.py  dork.py  email_service.py  httpx_scraper.py  indian_job_scrapers.py  job_api_scraper.py  (+4 more)
backend/scripts/: check_candidates.py  check_locations.py  run_focused_scan.py  validator.py
backend/services/: ai_matching.py  devto_service.py  email_extractor.py  github_service.py  google_search.py  recruitment_engine.py  skill_extractor.py  stackoverflow_service.py
(+64 files in other folders)
